# chipolino

./: README.md
The_Playbook/: Chipolino_The_Playbook.md  NXP.md  Renesas.md  STM32.md  nRF52.md
The_Playbook/pics/: lpc1343_17 - Copy.pdn  lpc1343_17.pdn  lpc2148_15_1.pdn  lpc2148_2.pdn  lpc2148_5.pdn  lpc2148_dump.pdn  lpc2148_dump_erase.pdn  lpc2148_jlink.pdn  nrf52833_fw_dump.pdn  rh850_dump_setup.pdn
fw_community_ed/: CMakeLists.txt  chipolino.c  common.c  jtag.c  swd_pico.c  ws2812.c
fw_community_ed/includes/: common.h  glitcher.h  jtag.h  target.h  ws2812.h
fw_community_ed/pio_sm/: p_gnd_3v3.pio  p_gnd_gpio.pio
fw_community_ed/targets/: lpc.c  nrf52.c  nrf52.h  rh850.c  rh850.h  stm32f4xx.c  stm32f4xx.h  stm_lib.c  stm_lib.h
fw_public/: chipolino.c  common.c  glitcher.c  jtag.c  swd_pico.c  ws2812.c
fw_public/includes/: common.h  swd_pico.h
fw_public/pio_sm/: p_3v3_cnt.pio  p_3v3_rst.pio  p_gnd_3v3.pio  p_gnd_cnt.pio  p_gnd_cnt_2g.pio  p_swd.pio  pwm.pio
fw_public/targets/: lpc.c  lpc.h  nrf52.c  rh850.c  rh850.h  stm32f4xx.h
pcb/ChipOlino_revA/BOM/: Bill of Materials-ChipOlino_revA.xlsx
pcb/ChipOlino_revA/Gerber/ChipOlino_revA/: ChipOlino_revA.G1  ChipOlino_revA.G2  (+11 more)
pcb/ChipOlino_revA/Pick and place/: Pick Place for Chipolino_revA.txt
pcb/universal_addon_revA/Pick and place/: Pick Place for universal_addon_revA(3v3 Pull-Up).txt
scripts/: check_ssr_rh850.py  chipctrl.py  chipolino.py  dump_lpc1343.py  dump_lpc2148.py  dump_rh850.py  dump_stm32.py  erase_lpc1343.py  erase_lpc2148.py  erase_rh850.py  requirements.txt  test_erase_stm32.py
(+108 files in other folders)
